@@ -6,6 +6,10 @@ xmlns="http://www.w3.org/1999/xhtml">
 
 <xsl:import href="resource:templates/reST.xsl" />
 
+<xsl:template match="note" name="note">
+	<div class="notes"><xsl:apply-templates /></div>
+</xsl:template>
+
 <xsl:template match="/" name="main">
 <html>
   <head>
